<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/paid_success"
    android:visibility="gone"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/tick"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteCardColor"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/hind_semi_bold"
                    android:text="@string/thank_you"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteCardColor"
                    android:fontFamily="@font/hind_semi_bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/order_id"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteCardColor"
                    android:id="@+id/order_id"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"/>
            </LinearLayout>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_weight="60"
            android:id="@+id/scroll"
            android:padding="@dimen/dimen_20dp"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/hind_semi_bold"
                    android:text="@string/how_would_you_like_to_recieve_your_cash_reward"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:orientation="vertical"
                    android:id="@+id/radiogrp">


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/paytm"
                        android:hint="@string/paytm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20dp"
                        android:fontFamily="@font/hind_semi_bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:id="@+id/paytmtext"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/signup_text_margin_top">
                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="@string/paytm_account_linked_to"
                            android:id="@+id/paytm_et"
                            android:maxLength="10"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:id="@+id/upi"
                        android:hint="@string/upi"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20dp"
                        android:fontFamily="@font/hind_semi_bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:id="@+id/upitext"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/signup_text_margin_top">
                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="@string/upi_id"
                            android:id="@+id/upi_et"
                            android:maxLength="20"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:id="@+id/bank"
                        android:hint="@string/bank_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_20dp"
                        android:fontFamily="@font/hind_semi_bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/dimen_60dp"
                        android:visibility="gone"
                        android:id="@+id/accounttext">
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                style="@style/modifiedEditText"
                                android:hint="@string/account_number"
                                android:id="@+id/bank_account"
                                android:maxLength="25"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                style="@style/modifiedEditText"
                                android:hint="@string/ifsc_code"
                                android:id="@+id/bank_ifsc"
                                android:maxLength="25"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">
                            <EditText
                                style="@style/modifiedEditText"
                                android:hint="@string/account_holder_s_name"
                                android:id="@+id/bank_account_name"
                                android:maxLength="20"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </RadioGroup>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <Button
        style="@style/next"
        android:text="@string/next"
        android:id="@+id/paid_next"
        android:textColor="@color/whiteCardColor"
        android:textSize="@dimen/dimen_18dp"
        android:fontFamily="@font/hind_semi_bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dimen_20dp"/>
</RelativeLayout>
