<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteCardColor">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/freeheading"
                android:textSize="40sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/hind_semi_bold"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/share"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freetext"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/hind_semi_bold"/>

            <Button
                style="@style/loginButton"
                android:layout_gravity="center"
                android:fontFamily="@font/hind_semi_bold"
                android:textSize="18sp"
                android:text="@string/proceed"
                android:id="@+id/freebtnproceed"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
