<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_20dp"
    android:paddingEnd="@dimen/dimen_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_10dp">


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_medium"
            android:textColor="@color/black"
            android:text="@string/brightness" />

        <SeekBar
            android:id="@+id/seekbar_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_10dp">


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_medium"
            android:textColor="@color/black"
            android:text="@string/contrast" />

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_medium"
            android:textColor="@color/black"
            android:text="@string/saturation" />

        <SeekBar
            android:id="@+id/seekbar_saturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
